# orso

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  test-values  test_compression.rs  todo.todo
.github/workflows/: release-plz.yml
orso/: Cargo.toml
orso-macros/: Cargo.toml
orso-macros/src/: lib.rs
orso/src/: database.rs  i64_codec.rs  integer_codec.rs  lib.rs  migrations.rs  operations.rs  test.rs  test_id_generation.rs  test_migration_detection.rs  test_sqlite.rs  traits.rs  utils.rs
src/: operations.rs  query.rs  traits.rs
tests/: database_test.rs  migrations.rs  model_test.rs
tests/models/: mod.rs
