[package]
name = "orso-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ORSO procedural macros for Model trait and FieldOrder introspection"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
orso = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
